# gqr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  assign_id.cpp  benchhasher.cpp  bin_to_fvecs.cpp  cal_groundtruth.cpp  cal_recall.cpp  doublebin_to_fvecs.cpp  graph_search.h  hasher.cpp  opq_evaluate.cpp  sample_queries.cpp  sample_remove_queries.cpp  search.cpp  search.h  search_graph.h  search_intcode.h  search_mip.cpp  search_mip.h  test.cpp
apps/knngraph/: KNNGraph_Analyzer.cpp  KNN_graph_analyzer.cpp
apps/mips/: CMakeLists.txt  mips_lshbox_detail.cpp
data/movielens/: movielens_query.fvecs
data/random_53387_192_0_10/: random_53387_192_0_10_angular_groundtruth.ivecs  random_53387_192_0_10_angular_groundtruth.lshbox  random_53387_192_0_10_groundtruth.ivecs  random_53387_192_0_10_groundtruth.lshbox  random_53387_192_0_10_query.fvecs  (+1 more)
include/: lshbox.h  reflect.h
include/util/: stat.h  (+1 more)
reproduce/: prepareData.sh  runExperiment.sh  runMainExperiments.sh
run/: codelength-hl.sh  codelength-hr.sh  codelength-tl.sh  mtables-hl.sh  mtables-hr.sh  mtables-tl.sh  run-hl.sh  run-hr.sh  run-lr.sh  run-tl.sh  run-top20.sh  run.sh  step-run-hl.sh  step-run-hr.sh  step-run-lr.sh  step-run-tl.sh  test.sh  tmp.sh  topk-sift.sh  topk-tiny.sh  train-pca.sh  train-sift.sh  train-tiny.sh
script/: CMakeCache.txt  Makefile  README.md  alsh.sh  angualr_groundtruth.sh  assign_id.sh  benchhasher.sh  bin_to_fvecs.sh  cal_groundtruth.sh  cal_recall.sh  doublebin_to_fvecs.sh  lmip.sh  log.txt  mips.sh  product_groundtruth.sh  readme.txt  sample_queries.sh  sample_remove_queries.sh  search.sh  search_mip.sh  search_spectral.sh
test/: BinaryTest.cpp  CMakeLists.txt  fv_test.cpp  test.cpp  tstable_t.cpp
tools/: CMakeLists.txt  itqlsh_test.cpp  shlsh_test.cpp
tools/probing/: CMakeLists.txt  benchhasher.cpp  laitqlsh_lookup.cpp  laitqlsh_rank.cpp  laitqlsh_topkquery.cpp  lapcalsh_topkquery.cpp  lashlsh_topkquery.cpp  lasphlsh_topkquery.cpp  newitqlsh_probing.cpp  pcah.cpp
(+220 files in other folders)
