PROJECT(PROBINGS)

SET(PROBINGS
    newitqlsh_probing
    laitqlsh_rank
    lapcalsh_topkquery
    lashlsh_topkquery
)

FOREACH(PROBING ${PROBINGS})
    ADD_EXECUTABLE(${PROBING} ${PROBING}.cpp)
ENDFOREACH(PROBING)

# SET(EXECUTABLE_OUTPUT_PATH ${LSHBOX_BINARY_DIR}/bin/${SAVE_CLASS})
SET(EXECUTABLE_OUTPUT_PATH ${LSHBOX_BINARY_DIR}/bin)
